@@ -103,7 +103,7 @@ class FieldWidgets(OrderedDict):
         prefix = expandPrefix(self.form.prefix)
         prefix += expandPrefix(self.prefix)
         request = self.request
-        params = self.form.getRequestParams()
+        params = self.form.getParams()
         context = self.form.getContext()
 
         sm = self.request.registry
